<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/keyboard_width"
    android:layout_height="@dimen/keyboard_height"
    android:layout_gravity="center"
    android:background="@drawable/ic_keyboard_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/value_edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/ic_edit_bg"
            android:focusableInTouchMode="false"
            android:maxEms="3"
            android:maxLength="3"
            android:textColor="@color/select_txt_c"
            android:textSize="@dimen/normal_txt_size" />

        <Button
            android:id="@+id/clear_b"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/keyboard_margin"
            android:layout_weight="1"
            android:background="@drawable/drawable_backspace" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/one_B"
            style="@style/input_key"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/keyboard_margin"
            android:layout_weight="1"
            android:text="@string/one" />

        <Button
            android:id="@+id/two_B"
            style="@style/input_key"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/keyboard_margin"
            android:layout_weight="1"
            android:text="@string/two" />

        <Button
            android:id="@+id/three_B"
            style="@style/input_key"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/keyboard_margin"
            android:layout_weight="1"
            android:text="@string/three" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/four_B"
            style="@style/input_key"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/keyboard_margin"
            android:layout_weight="1"
            android:text="@string/four" />

        <Button
            android:id="@+id/five_B"
            style="@style/input_key"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/keyboard_margin"
            android:layout_weight="1"
            android:text="@string/five" />

        <Button
            android:id="@+id/six_B"
            style="@style/input_key"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/keyboard_margin"
            android:layout_weight="1"
            android:text="@string/six" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/seven_B"
            style="@style/input_key"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/keyboard_margin"
            android:layout_weight="1"
            android:text="@string/seven" />

        <Button
            android:id="@+id/eight_B"
            style="@style/input_key"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/keyboard_margin"
            android:layout_weight="1"
            android:text="@string/eight" />

        <Button
            android:id="@+id/nine_B"
            style="@style/input_key"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/keyboard_margin"
            android:layout_weight="1"
            android:text="@string/nine" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_B"
            style="@style/input_key"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/keyboard_margin"
            android:layout_weight="1"
            android:text="@string/cancel_str" />

        <Button
            android:id="@+id/zero_B"
            style="@style/input_key"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/keyboard_margin"
            android:layout_weight="1"
            android:text="@string/zero" />

        <Button
            android:id="@+id/ok_B"
            style="@style/input_key"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/keyboard_margin"
            android:layout_weight="1"
            android:text="@string/ok_str" />
    </LinearLayout>

</LinearLayout>