<?xml version="1.0" encoding="utf-8"?>
<com.example.test.AlertViewByOther  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/window_bg"
    android:layout_gravity="center_vertical"
    android:layout_marginStart="10dp"
    android:orientation="vertical"
    >
    <TextView 
            android:id="@+id/tv_msgInfo_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="6dp"
            android:text="@string/sd_no_space_by_other"
            android:textSize="@dimen/msgInfo_textSize"
        />
    
    <include layout="@layout/update_space_layout"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="7dp"
                android:layout_marginStart="5dp"
                android:id="@+id/alert_other_update_space_layout"/>
    
    <RelativeLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
        >
            <Button 
                    android:id="@+id/btn_info_ok_other"
                    android:layout_height="wrap_content"
                    android:layout_width="@dimen/space_no_enough_btn_width"
                    android:background="@drawable/save_btn_bg"  
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="50dp"
                    android:text="@string/info_ok_str"
                    android:textSize="@dimen/window_btn_textSize"
                />
            
            <Button 
                    android:id="@+id/btn_enter_folder_other"
                    android:layout_height="wrap_content"
                    android:layout_width="@dimen/space_no_enough_btn_width"
                    android:background="@drawable/save_btn_bg"  
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="50dp"
                    android:text="@string/enter_folder_str"
                    android:textSize="@dimen/window_btn_textSize"              
                />
        
    </RelativeLayout>
     
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" 
            android:layout_marginStart="15dp"
            android:orientation="horizontal"
        >
        <TextView 
            android:layout_marginStart="1dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start|top"
            android:gravity="start|top"
            android:text="@string/tips_str"
            android:textSize="@dimen/tip_textSize"
            />
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="15dp"
            >
            <TextView 
                android:id="@+id/tv_tips_other1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dir_first_str"
                android:layout_gravity="start"
                android:gravity="start|center_vertical"
                android:textSize="@dimen/tip_textSize"
                />
             <TextView 
                 android:id="@+id/tv_tips_other2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dir_second_str"
                android:layout_gravity="start"
                android:gravity="start|center_vertical"
                android:textSize="@dimen/tip_textSize"
                />
        </LinearLayout>
        
        
    </LinearLayout>

</com.example.test.AlertViewByOther>
