<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="8dp"
    android:orientation="horizontal" >
        <RadioGroup 
            android:id="@+id/rg_total"
            android:layout_height="match_parent"
	        android:layout_width="100dp"
	        android:layout_marginStart="15dp"
	        android:layout_marginTop="15dp"
	        android:orientation="vertical"
	        android:gravity="center_horizontal"
            >
	        <RadioButton android:id="@+id/rb_lock"
	            android:layout_height="@dimen/btn_file_height"
	            android:layout_width="match_parent"
	            android:textSize="@dimen/btn_file_textSize"
	            android:text="@string/str_file_lock"
	            android:checked="true"
	            android:gravity="center"
	            android:button="@null"
	            android:textColor="@color/black"
	            android:background="@drawable/file_btn_bg"/>
	        <View 
	            android:layout_width="match_parent"
	            android:layout_height="1dp"
	            android:background="@android:color/background_dark"/>
	        <RadioButton android:id="@+id/rb_usb"
	            android:layout_height="@dimen/btn_file_height"
	            android:layout_width="match_parent"
	            android:textSize="@dimen/btn_file_textSize"
	            android:text="@string/str_file_usb"
	            android:gravity="center"
	            android:button="@null"
	            android:textColor="@color/black"
	            android:background="@drawable/file_btn_bg"/>
	        <View 
	            android:layout_width="match_parent"
	            android:layout_height="1dp"
	            android:background="@android:color/background_dark"/>
	        <RadioButton android:id="@+id/rb_cvbs"
	            android:layout_height="@dimen/btn_file_height"
	            android:layout_width="match_parent"
	            android:textSize="@dimen/btn_file_textSize"
	            android:text="@string/str_file_cvbs"
	            android:gravity="center"
	            android:button="@null"
	            android:textColor="@color/black"
	            android:background="@drawable/file_btn_bg"/>
	        <View 
	            android:layout_width="match_parent"
	            android:layout_height="1dp"
	            android:background="@android:color/background_dark"/>
	        <RadioButton android:id="@+id/rb_360"
	            android:layout_height="@dimen/btn_file_height"
	            android:layout_width="match_parent"
	            android:textSize="@dimen/btn_file_textSize"
	            android:text="@string/str_file_360"
	            android:gravity="center"
	            android:button="@null"
	            android:textColor="@color/black"
	            android:background="@drawable/file_btn_bg"/>
	        <View 
	            android:layout_width="match_parent"
	            android:layout_height="1dp"
	            android:background="@android:color/background_dark"/>
	        <RadioButton android:id="@+id/rb_pic"
	            android:layout_height="@dimen/btn_file_height"
	            android:layout_width="match_parent"
	            android:textSize="@dimen/btn_file_textSize"
	            android:text="@string/str_file_pic"
	            android:textColor="@color/black"
	            android:gravity="center"
	            android:button="@null"
	            android:background="@drawable/file_btn_bg"/>
        
		</RadioGroup>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical"
        android:layout_height="match_parent"
        >
		   <FrameLayout 
		       android:layout_width="match_parent"
		       android:layout_height="0dp"
		       android:layout_weight="8"
		       android:orientation="horizontal"
		       >
		       <ListView 
		           android:id="@+id/listview_file"
		           android:layout_width="match_parent"
		           android:layout_height="match_parent"
		           android:background="@drawable/list_bg"
                   android:cacheColorHint="#00000000"
                   android:divider="@drawable/sep_line"
                   android:listSelector="#00000000" 
		           ></ListView>

		   </FrameLayout>
		   
		   <RelativeLayout
		       android:layout_width="match_parent"
		       android:layout_height="0dp"
		       android:layout_weight="2"
		       android:orientation="horizontal"
		       >
		       <ImageView 
		           android:id="@+id/iv_file_del"
		           android:layout_height="match_parent"
		           android:layout_width="wrap_content"
		           android:src="@drawable/file_del"
		           android:scaleType="fitCenter"
		           android:layout_marginLeft="10dp"
		           android:layout_alignParentLeft="true"
		           />
		       <LinearLayout 
		           android:layout_width="120dp"
		           android:layout_height="match_parent"
		           android:orientation="vertical"
		           android:layout_toRightOf="@+id/iv_file_del"
		           android:layout_marginLeft="20dp"
		           >
		           <LinearLayout 
		               android:layout_width="match_parent"
		               android:layout_height="0dp"
		               android:layout_weight="1"
		               >
		               <TextView 
		                   android:layout_width="0dp"
		                   android:layout_height="match_parent"
		                   android:layout_weight="1"
		                   android:textSize="@dimen/file_tv_stat_size"
		                   android:paddingBottom="2dp"
		                   android:gravity="bottom|right"
		                   android:text="@string/str_free_space_size"
		                   />
		               <TextView 
		                   android:id="@+id/tv_free_size"
		                   android:layout_width="0dp"
		                   android:layout_height="match_parent"
		                   android:layout_weight="1"
		                   android:paddingLeft="10dp"
		                   android:textSize="@dimen/file_tv_stat_size"
		                   android:paddingBottom="2dp"
		                   android:gravity="bottom|left"
		                   android:text="@string/str_zero"
		                   />
		           </LinearLayout>
		           <LinearLayout 
		               android:layout_width="match_parent"
		               android:layout_height="0dp"
		               android:layout_weight="1"
		               >
		               <TextView 
		                   android:layout_width="0dp"
		                   android:layout_height="match_parent"
		                   android:layout_weight="1"
		                   android:textSize="@dimen/file_tv_stat_size"
		                   android:paddingTop="2dp"
		                   android:gravity="top|right"
		                   android:text="@string/str_total_space_size"
		                   />
		               <TextView 
		                   android:id="@+id/tv_total_size"
		                   android:layout_width="0dp"
		                   android:layout_height="match_parent"
		                   android:layout_weight="1"
		                   android:textSize="@dimen/file_tv_stat_size"
		                   android:paddingTop="2dp"
		                   android:paddingLeft="10dp"
		                   android:gravity="top|left"
		                   android:text="@string/str_zero"
		                   />
		           </LinearLayout>
		       </LinearLayout>
		       <Button android:id="@+id/btn_select_all"
		           android:layout_width="80dp"
		           android:layout_height="40dp"
		           android:text="@string/str_select_all"
		           android:background="@drawable/file_btn_bg2"
		           android:textSize="@dimen/btn_file_textSize2"
		           android:layout_alignParentRight="true"
		           android:layout_centerVertical="true"
		           android:layout_marginRight="10dp"
		           />
		       
		       <Button android:id="@+id/btn_select_reverse"
		           android:layout_width="80dp"
		           android:layout_height="40dp"
		           android:text="@string/str_select_reverse"
		           android:background="@drawable/file_btn_bg2"
		           android:textSize="@dimen/btn_file_textSize2"
		           android:layout_toLeftOf="@+id/btn_select_all"
		           android:layout_centerVertical="true"
		           android:layout_marginRight="20dp"
		           />
		   </RelativeLayout>
	</LinearLayout>
</LinearLayout>
